# Study_PBRT_V3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/OBJ_Loader/: OBJ_Loader.h  README.md
resource/connelbox/: connelbox.mtl
resource/hutao/: hutao.mtl
resource/plane/: plane.mtl
src/accelerators/: bvh.cpp  bvh.h
src/cameras/: pinhole.cpp  pinhole.h
src/core/: camera.h  clock.h  efloat.h  film.cpp  film.h  gemotric.h  geometric.cpp  geometric.h  geometry.cpp  geometry.h  interaction.h  light.h  material.h  memory.cpp  memory.h  parallel.cpp  parallel.h  pbrt.h  primitice.cpp  primitive.h  quaternion.cpp  quaternion.h  scene.cpp  scene.h  shape.h  spectrum.h  stats.cpp  stats.h  stringprint.h  transform.cpp  transform.h
src/lights/: point.h
src/main/: pbrt.cpp
src/shape/: triangle.cpp  triangle.h
src/tests/: accelerators.cpp  camera.cpp  error.cpp  geometry.cpp  parallel.cpp  pbrt_test.cpp  pbrt_test.h  primitive.cpp  quaternion.cpp  shape.cpp  stats.cpp
src/tests/gtest/: gtest_main.cc
